--- a/src/Ens/JobeetBundle/Resources/config/routing.yml
+++ b/src/Ens/JobeetBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 ens_jobeet_homepage:
-    pattern:  /hello/{name}
+    pattern:  /
     defaults: { _controller: EnsJobeetBundle:Default:index }
+
+ens_jobeet_show:
+    pattern:  /job/{id}/show
+    defaults: { _controller: EnsJobeetBundle:Default:show }
